k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blazorcrud-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blazorcrud-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blazorcrud-ui
                port:
                  number: 80
